<resources>
    <string name="app_name">Kanete</string>

    <string name="file_provider" translatable="false">com.example.kanete.fileprovider</string>

    <!--  LoginActivity  -->
    <string name="LoginActivity_login">Login</string>
    <string name="LoginActivity_email">email@email.com</string>
    <string name="LoginActivity_pass">Password</string>
    <string name="LoginActivity_signup">Don\'t have an account! SignUp</string>

    <!--  SignupActivity  -->
    <string name="SignupActivity_radio_type">What type of user are you?</string>
    <string name="SignupActivity_radio_customer">Customer</string>
    <string name="SignupActivity_radio_store">Store</string>
    <string name="SignupActivity_button">Signup</string>
    <string name="SignupActivity_first_name">Enter your first name:</string>
    <string name="SignupActivity_first_name_ex">Ex. Sam</string>
    <string name="SignupActivity_last_name">Enter your last name:</string>
    <string name="SignupActivity_last_name_ex">Ex. Smith</string>
    <string name="SignupActivity_gender">Chose your gender:</string>
    <string name="SignupActivity_gender_M">Male</string>
    <string name="SignupActivity_gender_F">Female</string>
    <string name="SignupActivity_email">Enter your email address:</string>
    <string name="SignupActivity_email_ex">Ex. sam@smith.com</string>
    <string name="SignupActivity_password">Enter your password:</string>
    <string name="SignupActivity_repassword">Re-enter your password:</string>
    <string name="SignupActivity_password_ex">Ex. Password</string>
    <string name="SignupActivity_store_name">Enter your store name:</string>
    <string name="SignupActivity_store_name_ex">Ex. Store</string>
    <string name="SignupActivity_store_address">Enter your store address:</string>
    <string name="SignupActivity_store_address_ex">Ex. Ariel, Israel</string>
    <string name="SignupActivity_store_phone">Enter your store phone number:</string>
    <string name="SignupActivity_store_phone_ex">050–123–4567</string>
    <string name="SignupActivity_store_facebook">Enter the store facebook page:</string>
    <string name="SignupActivity_store_facebook_ex">Ex. facebook url</string>
    <string name="SignupActivity_store_instagram">Enter the store instagram page:</string>
    <string name="SignupActivity_store_instagram_ex">Ex. instagram url</string>
    <string name="SignupActivity_store_website">Enter the store website:</string>
    <string name="SignupActivity_store_website_ex">Ex. website url</string>

    // menus
    <string name="title_home">Home</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="title_my_products">My Products</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_account_store">Account</string>

    // AccountStoreFragment
    <string name="AccountStoreFragment_signout">SignOut</string>

    // AddProductFragment
    <string name="AddProductFragment_title">Add Product</string>
    <string name="AddProductFragment_name">Enter the product\'s name:</string>
    <string name="AddProductFragment_name_ex">Ex. Nike Shoes</string>
    <string name="AddProductFragment_images">Add images of the product:</string>
    <string name="AddProductFragment_images_ex">Product Images</string>
    <string name="AddProductFragment_price">Enter the Product\'s price:</string>
    <string name="AddProductFragment_price_ex">Ex. 149.99 ₪</string>
    <string name="AddProductFragment_description">Enter the products description:</string>
    <string name="AddProductFragment_description_ex">Ex. color, size, materials…</string>
    <string name="AddProductFragment_quantity">Enter the product\'s quantity:</string>
    <string name="AddProductFragment_quantity_ex">Ex. 20</string>
    <string name="AddProductFragment_category">Enter the product\'s category:</string>
    <string name="AddProductFragment_category_ex">Choose category</string>
    <string name="AddProductFragment_button_add">Add Product</string>

    <plurals name="pick_multi">
        <item quantity="one">One image selected</item>
        <item quantity="other">%1$d images selected</item>
    </plurals>
    <plurals name="pick_multi_more">
        <item quantity="one">Please select one more image…</item>
        <item quantity="other">Please select %1$d more images…</item>
    </plurals>
    <string name="pick_multi_limit">You have more than %1$d images selected…</string>

    <!--  ProductViewActivity  -->
    <string name="ProductViewActivity_add_to_cart">Add to Cart</string>

    <!--  CartFragment  -->
    <string name="CartFragment_Buy_All">Buy All</string>
    <string name="CartFragment_Buy_Selected">Buy Selected</string>

</resources>